Door issue fixed thanks to the amazing Gabe (that's actually has a really good ring to it). Visible on the .door-center overflow did it! Added all pages. Still need to add alt tags and link things. Also cards need to be personalized. It's 2am though, so that will be for tomorrow....later today.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 /* Google Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Meow+Script&family=Urbanist:ital,wght@0,400;0,700;1,400;1,700&family=Vidaloka&display=swap');
+
+
 .body
     {
         font-family: 'Urbanist', sans-serif;
@@ -10,6 +12,7 @@
         background: rgb(255,255,255);
         background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.25674019607843135) 50%, rgba(255,255,255,0.4962359943977591) 100%);
     }
+
 .nav-item
     {
         font-family: 'Urbanist', sans-serif;
@@ -34,6 +37,11 @@
 .jumbootd
     {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+
+.n2mmm, .journal101
+    {
+        color: black;
     }
 .quoteotdheader, .recentblogs
     {
@@ -72,87 +80,52 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        overflow: hidden;
+        overflow: visible;
         padding: 26px;
     }
 
-  .door {
-    position: relative;
-    width: 226px;
-    height: 459px;
-    cursor: pointer;
-    transform-style: preserve-3d;
-    transform: perspective(2500px);
-  }
+.door 
+    {
+        position: relative;
+        width: 226px;
+        height: 459px;
+        cursor: pointer;
+        transform-style: preserve-3d;
+        transform: perspective(2500px);
+    }
   
-  .door-front {
-    width: 226px;
-    height: 459px;
-    overflow: hidden;
-    transform-origin: left;
-    box-shadow: 30px 0 50px rgba(0,0,0,0.2);
-    position: absolute;
-    background-color: white;
-    z-index:1;
-    transition: .69s;
-  }
+.door-front 
+    {
+        width: 226px;
+        height: 459px;
+        overflow: hidden;
+        transform-origin: left;
+        box-shadow: 30px 0 50px rgba(0,0,0,0.2);
+        position: absolute;
+        background-color: white;
+        z-index:1;
+        transition: .69s;
+    }
   
-  .door-front:before, .door-front:after {
+.door-front:before, .door-front:after 
+    {
     content:"";
     position: absolute;
     background-color: transparent;
-    width: 155px;
-    height: 165px;
-    /* border: 2px ridge black; */
-    left:22.5px;
-  }
+    }
   
-  .door-front:before {
-    top:25px;
-  }
+.door:hover .door-front 
+    {
+        transform: rotateY(-160deg);
+    }
   
-  .door-front:after {
-    top: 215px;
-  }
-
-.welcome-sign
-  {
-      position: absolute;
-      top: 69px;
-      left: 60px;
-  }
-
-  .knob {
-    position: absolute;
-    width: 20px;
-    height:30px;
-    background-color: transparent;
-    top:193px;
-    left:178px;
-    border-radius:2px;
-  }
-  
-  .knob:before {
-    content:"";
-    position: absolute;
-    border-radius:50%;
-    background-color: #f1c83c;
-    width:18px;
-    height:18px;
-    left:-1px;
-    box-shadow: 2px 2px rgba(0,0,0,0.2);
-  }
-  
-  .door:hover .door-front {
-    transform: rotateY(-160deg);
-  }
-  
-  .door-back {
-    position: relative;
-    background: transparent;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    outline: 2px solid #101314;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
+.door-back 
+    {
+        position: relative;
+        background: transparent;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        outline: 2px solid #101314;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
